--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -9,6 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{ url_for( 'static', filename = page_css) }}">
         <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+        {% block script %}{% endblock script %}
     </head>
     <body>
         <header>
