--- a/flask/templates/footer.html
+++ b/flask/templates/footer.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" id="foot_box">
     <hr class="footer_hr">
-    <div class="info">Support us @ <a href="https://github.com/AlephaLIm/mern" class="foot_info">https://github.com/AlephaLIm/mern</a>!</div>
+    <div class="info">Support us @ <a href="https://github.com/AlephaLIm/Hoshimachi-Case-Files" class="foot_info">https://github.com/AlephaLIm/Hoshimachi-Case-Files</a>!</div>
     <div class="devs">
         <div class="dev_label">Contributers: </div>
         <div class="dev_ppl">OhsterTohster @Github<br>Alepha @Github<br>UyouZeca @Github<br>ninjazenia @Github<br>sawaLuna @Github</div>
