--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -5,9 +5,24 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,1,0" />
 {% endblock style %}
 
+{% block script %}
+<script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
+{% endblock script %}
 
 {% block body %}
 <main>
-    <p>Hello World</p>
+    <p id="test">Hello World</p>
 </main>
+<script>
+$(document).ready(function(){
+    var source = new EventSource('/datastream');
+    source.onmessage = function(event) {
+        console.log(event.data);
+        var e = JSON.parse(event.data.substring(2, event.data.length - 1));
+        var test = JSON.parse(e.data)
+        console.log(typeof test[1]);
+        document.getElementById('test').innerHTML= e.data;
+    }
+});
+</script>
 {% endblock body %}
