--- a/flask/static/css/homepage.css
+++ b/flask/static/css/homepage.css
@@ -5,3 +5,44 @@ body {
     grid-template-rows: auto 1fr auto;
     background-color: #18181c;
 }
+
+#main_div {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-left: min(5vw, 50px);
+    margin-right: min(5vw, 50px);
+    border-radius: 10px;
+    background-color: #1f1f29;
+}
+
+.linegraph {
+    align-self: center;
+    padding-top: 30px;
+    width: max(45vw, 370px);
+    margin-left: min(3vw, 20px);
+    margin-right: min(3vw, 20px);
+}
+
+.piechart {
+    padding-top: 30px;
+    width: max(33vw, 370px);
+    height: max(33vw, 370px);
+    margin-left: min(3vw, 20px);
+    margin-right: min(3vw, 20px);
+}
+
+@media screen and (max-width: 500px) {
+
+#main_div {
+    display: block;
+}
+.linegraph {
+    display: flex;
+    justify-content: center;
+}
+.piechart {
+    display: flex;
+    justify-content: center;
+}
+}
