--- a/flask/static/css/footer.css
+++ b/flask/static/css/footer.css
@@ -6,6 +6,7 @@
     background: linear-gradient(rgba(0, 0, 0, 0.40), rgba(0, 0, 0, 0.40)), url("../assets/bg_img.jpg"), no-repeat;
     box-shadow: -3px 0 3px 3px #100720;
     margin-top: 60px;
+    max-width: 100vw;
 }
 
 .footer_hr {
