--- a/flask/static/css/homepage.css
+++ b/flask/static/css/homepage.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Megrim&display=swap');
+
 body {
     min-height: 100vh;
+    max-width: 100vw;
     display: grid;
     margin: 0;
     grid-template-rows: auto 1fr auto;
@@ -7,42 +10,229 @@ body {
 }
 
 #main_div {
+    margin-top: 20px;
+    padding-bottom: 30px;
+    width: 97vw;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    background-color: #171720;
+    box-shadow: 0 0 3px 1px #05c9f5;
+}
+
+h1 {
+    font-family: 'Megrim', 'cursive';
+    margin-left: 90px;
+    padding-top: 50px;
+    font-weight: 500;
+}
+
+hr {
+    width: 90vw;
+    justify-self: center;
+}
+
+#graphs, #tables {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+}
+
+.cases {
+    padding-top: 20px;
+    padding-left: 0;
+    margin-bottom: 30px;
+    width: max(48vw, 390px);
+    margin-left: min(1.5vw, 10px);
+    margin-right: min(5.5vw, 20px);
+}
+
+.clients {
+    padding-top: 20px;
+    margin-bottom: 30px;
+    width: max(42vw, 390px);
+    margin-left: min(5.5vw, 20px);
+    margin-right: min(1.5vw, 10px);
+}
+
+.cases thead,.cases tbody, .clients thead, .clients tbody {
+    display: block;
+}
+
+.cases thead th, .clients thead th {
+    height: 40px;
+    text-align: center;
+    padding-left: 5px;
+    padding-right: 5px;
+    background-color: #000000;
+    color: #cfc402;
+    border-top: 1px solid #3a7da1;
+    border-bottom: 1px solid #3a7da1;
+}
+
+.cases thead, .clients thead, .cases tbody tr, .clients tbody tr {
+    border-left: 1px solid #3a7da1;
+    border-right: 1px solid #3a7da1;
+}
+
+.cases tbody tr:nth-child(even), .clients tbody tr:nth-child(even) {
+    background-color: #27ccdb;
+}
+
+.cases tbody tr:nth-child(odd), .clients tbody tr:nth-child(odd) {
+    background-color: #200f27;
+}
+
+.cases tbody tr:nth-child(even) td, .clients tbody tr:nth-child(even) td {
+    color: black;
+    font-weight: 600;
+}
+
+.cases tbody, .clients tbody {
+    max-height: 33vh;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+.cases tbody::-webkit-scrollbar, .clients tbody::-webkit-scrollbar {
+    display: none;
+}
+
+.cases tbody td, .clients tbody td{
+    text-align: center;
+    border-bottom: 1px solid #3a7da1;
+    overflow: hidden;
+    color: white;
+    padding-left: 5px;
+    padding-right: 5px;
+    font-weight: 600;
+    
+}
+
+.clients tbody td:nth-child(6) {
+    
+    background-color: #323333;
+    color: white;
+    border: none;
+    box-shadow: 1px 0 2px 1px #0a0a0a inset;
+}
+
+.cases .case_empty {
+    width: max(48vw, 390px); 
+    height: 50vh; 
+    background-color: #323333; 
+    font-size: larger;
+    box-shadow: 0 0 2px 2px #191a1c;
+    border: none;
+}
+
+.clients .client_empty {
+    width: max(42vw, 390px);
+    height: 50vh; 
+    background-color: #323333; 
+    font-size: larger;
+    box-shadow: 0 0 2px 2px #191a1c;
+    border: none;
+}
+
+.graph_holder {
+    width: 46vw;
+    margin: 1vw;
+    box-shadow: 3px 3px 3px 1px #27ccdb;
     display: flex;
     justify-content: center;
-    margin-top: 20px;
-    margin-left: min(5vw, 50px);
-    margin-right: min(5vw, 50px);
     border-radius: 10px;
-    background-color: #1f1f29;
 }
 
 .linegraph {
-    align-self: center;
-    padding-top: 30px;
+    padding-top: 7vw;
+    padding-left: 2vw;
+    padding-right: 1vw;
     width: max(45vw, 370px);
-    margin-left: min(3vw, 20px);
-    margin-right: min(3vw, 20px);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .piechart {
     padding-top: 30px;
-    width: max(33vw, 370px);
-    height: max(33vw, 370px);
-    margin-left: min(3vw, 20px);
-    margin-right: min(3vw, 20px);
+    padding-left: 4vw;
+    width: max(31vw, 350px);
+    height: max(31vw, 350px);
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@media screen and (max-width: 1024px) {
+
+#main_div, #graphs, #tables {
+    display: block;
+}
+
+#graphs, #tables {
+    margin-bottom: 20px;
+}
+
+.graph_holder {
+    width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 0 3px 1px #27ccdb inset;
+}
+
+.linegraph, .piechart{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    padding-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 20px;
+}
+
+.linegraph {
+    padding-right: 0;
+}
+
+.cases tbody td, .clients tbody td {
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    vertical-align: bottom;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-size: 10px;
+}
+
+.cases tbody td:nth-child(6), .clients tbody td:nth-child(6) {
+    padding-top: 5px;
+    padding-bottom: 6px;
+}
+
+.clients, .cases{
+    padding-left: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.cases thead th, .clients thead th {
+    font-size: 10px;
+}
+
+.cases .case_empty, .clients .client_empty {
+    height: 200px;
+    line-height: 200px;
+    text-align: center;
+}
+
+.cases tbody, .clients tbody {
+    max-height: 200px;
+}
 }
 
 @media screen and (max-width: 500px) {
-
-#main_div {
-    display: block;
-}
-.linegraph {
-    display: flex;
-    justify-content: center;
-}
-.piechart {
-    display: flex;
-    justify-content: center;
-}
+    h1 {
+        text-align: center;
+        margin-left: 0;
+    }
 }
