--- a/flask/static/css/nav.css
+++ b/flask/static/css/nav.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Megrim&display=swap');
 
+header {
+    max-width: 100vw;
+}
+
 .header-logo {
     width: 100%;
     display: flex;
