--- a/flask/templates/navbar.html
+++ b/flask/templates/navbar.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="Navlinks">
             <div class="navbar-nav ml-auto">
                 <a class="nav-link ms-auto" href="{{ url_for('homepage') }}"><p>Home</p></a>
-                <a class="nav-link ms-auto" href="{{ url_for('homepage') }}"><p>Search</p></a>
+                <a class="nav-link ms-auto" href="{{ url_for('search') }}"><p>Search</p></a>
             </div>
         </div>
     </nav>
