--- a/flask/static/css/homepage.css
+++ b/flask/static/css/homepage.css
@@ -94,6 +94,7 @@ hr {
     max-height: 33vh;
     overflow-y: scroll;
     scrollbar-width: none;
+    border-bottom: 1px solid #3a7da1;
 }
 
 .cases tbody::-webkit-scrollbar, .clients tbody::-webkit-scrollbar {
@@ -102,7 +103,6 @@ hr {
 
 .cases tbody td, .clients tbody td{
     text-align: center;
-    border-bottom: 1px solid #3a7da1;
     overflow: hidden;
     color: white;
     padding-left: 5px;
@@ -121,7 +121,7 @@ hr {
 
 .cases .case_empty {
     width: max(48vw, 390px); 
-    height: 50vh; 
+    height: calc(33vh - 1px); 
     background-color: #323333; 
     font-size: larger;
     box-shadow: 0 0 2px 2px #191a1c;
@@ -130,7 +130,7 @@ hr {
 
 .clients .client_empty {
     width: max(42vw, 390px);
-    height: 50vh; 
+    height: calc(33vh - 1px); 
     background-color: #323333; 
     font-size: larger;
     box-shadow: 0 0 2px 2px #191a1c;
