--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -7,6 +7,7 @@
 
 {% block script %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/google-palette@1.1.1/palette.min.js"></script>
 <script src="{{ url_for('static', filename='/js/logstream.js') }}"></script>
 {% endblock script %}
 
