--- a/flask/templates/homepage.html
+++ b/flask/templates/homepage.html
@@ -63,7 +63,7 @@
             <template id="case_template">
                 <tr class="case_row">
                     <td style="width: max(3vw, 40px);">{case_num}</td>
-                    <td style="width: max(14.5vw, 90px);">{caseid}</td>
+                    <td style="width: max(14.5vw, 90px);"><a href="/case/{caseid}">{caseid}</a></td>
                     <td style="width: max(14.5vw, 90px);">{client}</td>
                     <td style="width: max(8vw, 84px);">{created}</td>
                     <td style="width: max(8vw, 84px);">{resolved}</td>
