--- a/flask/templates/search.html
+++ b/flask/templates/search.html
@@ -58,7 +58,7 @@
             </template>
             <template id="case_row_temp">
                 <tr class="selectable">
-                    <td style="width: 20vw;">{case_id}</td>
+                    <td style="width: 20vw;"><a href="/case/{case_id}">{case_id}</a></td>
                     <td class="sec_info" style="width: 20vw;">{client}</td>
                     <td class="casenum">{case_num}</td>
                     <td style="width: 10vw;">{video_file}</td>
